# GRIN_EXP_MUT

./: .gdbinit  .gitignore  Makefile  README.md
grin/: CMakeLists.txt
grin/cmake/: Common.cmake  grinConfig.cmake
grin/lib/: CMakeLists.txt
grin/lib/BasicAnalyses/: CMakeLists.txt  GeneratedCodeBasicInfo.cpp
grin/lib/Dump/: CMakeLists.txt  CollectCFG.cpp  CollectNoreturn.cpp
grin/lib/FunctionCallIdentification/: CMakeLists.txt  FunctionCallIdentification.cpp
grin/lib/FunctionIsolation/: CMakeLists.txt  IsolateFunctions.cpp
grin/lib/ReachingDefinitions/: CMakeLists.txt  ReachingDefinitionsPass.cpp
grin/lib/StackAnalysis/: ABIDataFlows-header.h  ABIDetectionPass.cpp  ABIIR.cpp  ABIIR.h  ASSlot.h  BasicBlockInstructionPair.h  CMakeLists.txt  Cache.cpp  Element.cpp  Element.h  FunctionABI.cpp  FunctionABI.h  FunctionBoundariesDetectionPass.cpp  FunctionsSummary.cpp  IncoherentCallsAnalysis.cpp  InterproceduralAnalysis.cpp  InterproceduralAnalysis.h  Intraprocedural.cpp  Intraprocedural.h  StackAnalysis.cpp  (+1 more)
grin/lib/Support/: Assert.cpp  CMakeLists.txt  CommandLine.cpp  Debug.cpp  DebugHelper.cpp  ExampleAnalysis.cpp  IRHelpers.cpp  Statistics.cpp
grin/runtime/: early-linked.c  support.c
grin/scripts/: grin  monotone-framework.py
grin/tools/: CMakeLists.txt
grin/tools/grin-lift/: BinaryFile.cpp  BinaryFile.h  CMakeLists.txt  CPUStateAccessAnalysisPass.cpp  CPUStateAccessAnalysisPass.h  CodeGenerator.cpp  CodeGenerator.h  ExternalJumpsHandler.cpp  ExternalJumpsHandler.h  InstructionTranslator.cpp  InstructionTranslator.h  JumpTargetManager.cpp  JumpTargetManager.h  Main.cpp  NoReturnAnalysis.cpp  NoReturnAnalysis.h  OSRA.cpp  OSRA.h  PTCDump.cpp  PTCInterface.h  SET.cpp  SET.h  SimplifyComparisonsPass.cpp  SimplifyComparisonsPass.h  SubGraph.h  VariableManager.cpp  VariableManager.h
support/components/: grin-c.mk  grin.mk
test/: cmp_instruction.py  count.sh  generate_result.py  lift_coreutils_realworld_O2.sh  lift_perlbench.sh  lift_spec_O2.sh  lift_spec_O3.sh  result_perlbench.sh  result_spec_O2.sh  result_spec_O3.sh
(+28 files in other folders)
